# minsurf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithm.md  associate_family.html  formfinding.html  index.html  math_background.md  soap_film_solver.html  tpms_explorer.html  use_cases.md  validation.md
examples/input/: saddle_boundary.json
notebooks/: minimal_surfaces_demo.ipynb
src/minsurf/: __init__.py  boundaries.py  cli.py  demo.py  exact.py  flow.py  io.py  mesh.py  metrics.py  operators.py  presets.py  report.py  stability.py  tpms.py  viewer.py  visualize.py
tests/: test_cli.py  test_convergence.py  test_exact_catenoid.py  test_exact_helicoid_enneper.py  test_flow_monotone.py  test_io.py  test_laplacian.py  test_mesh.py  test_operators_sphere.py  test_report.py  test_stability.py  test_weierstrass.py
